# Rosa

./: .gitignore  Data_for_DPO.ipynb  pyproject.toml
config/: lora_7b_local_recipe.md  phasea_benchmark.json
reports/: phasea_3b_vs_7b_vs_7brefine_summary.json  phasea_7b_dpo_readiness_gate.json  phasea_7b_vs_3b_failure_analysis.json  phasea_compare_postlora_single_vs_best_prelora.json  phasea_dataset.jsonl  phasea_dataset_all10.jsonl  phasea_dataset_iter1.jsonl  phasea_dataset_tier3dlite_qwenonly_3p.jsonl  phasea_dataset_tier3dlite_smoke_1p.jsonl  phasea_dataset_tier3dlite_smoke_1p_v2.jsonl  phasea_dataset_tierb.jsonl  phasea_dataset_tierb_7b_postlora_r1.jsonl  phasea_dataset_tierb_7b_postlora_single.jsonl  phasea_dataset_tierb_7b_r1.jsonl  phasea_dataset_tierb_7b_r2.jsonl  phasea_dataset_tierb_7b_r3.jsonl  phasea_dataset_tierb_7b_refine_r4.jsonl  phasea_dataset_tierb_r1.jsonl  phasea_dataset_tierb_r2.jsonl  phasea_dataset_tierb_r3.jsonl  phasea_dataset_tierbplus_qwenonly_3p.jsonl  phasea_dataset_tierbplus_smoke_1p.jsonl  phasea_dataset_tierbplus_smoke_1p_v2.jsonl  phasea_dataset_tierc.jsonl  phasea_dataset_tierc_qwenonly_3p.jsonl  phasea_dataset_tierc_r1.jsonl  phasea_dataset_tierc_r2.jsonl  phasea_dataset_tierc_r3.jsonl  phasea_dataset_tierc_smoke_1p.jsonl  phasea_dataset_tierc_smoke_1p_v2.jsonl  phasea_metrics_after_interventions.json  phasea_metrics_all10.json  phasea_metrics_iter1.json  phasea_metrics_tier3dlite_qwenonly_3p.json  phasea_metrics_tier3dlite_smoke_1p.json  phasea_metrics_tier3dlite_smoke_1p_v2.json  phasea_metrics_tierb.json  (+71 more)
src/: __init__.py  (+2 more)
(+2240 files in other folders)
